# experiment--applet-framework

./: LICENSE  README.md
applet-container/: applet-container.js  index.html
applet-example/: Cargo.toml  build.bat
applet-example/src/: lib.rs
applet-framework/: Cargo.toml
applet-framework/rsc/: default.css
applet-framework/src/: lib.rs
applet-framework/src/data/: mod.rs
applet-framework/src/dom/: mod.rs
applet-framework/src/form/: mod.rs
