[package]
name = "applet-framework"
version = "0.1.0"
authors = ["SentientTurtle"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "=0.2.80"    # wasm-bindgen IDE hinting broke, so version is locked
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
web-sys = { version = "0.3.57", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'ShadowRoot',
    'HtmlFormElement',
    'FormData',
    'File'
] }
chrono = "0.4.24"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = "debuginfo"